# endless-code

./: .gitignore  README.md
docs/: slack.md
rust/: README.md
rust/crates/api/src/: client.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: provider_client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/endless-slack/: Cargo.toml
rust/crates/endless-slack/src/: main.rs
rust/crates/rusty-claude-cli/src/: main.rs
